--- a/client/package.json
+++ b/client/package.json
@@ -14,16 +14,23 @@
     "axios": "^1.4.0",
     "lottie-web": "^5.11.0",
     "react": "^18.2.0",
+    "react-app-alias": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
+    "react-router": "^6.11.1",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.5.0",
+    "recoil": "^0.7.7",
     "styled-components": "^5.3.10",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
