--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "recharts": "^2.5.0",
     "recoil": "^0.7.7",
     "styled-components": "^5.3.10",
-    "typescript": "^4.4.2",
+    "typescript": "*",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -54,6 +54,13 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
-    "craco-alias": "^3.0.1"
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "craco-alias": "^3.0.1",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.8"
   }
 }
