--- a/client/package.json
+++ b/client/package.json
@@ -54,13 +54,6 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "craco-alias": "^3.0.1",
-    "eslint-config-standard-with-typescript": "^34.0.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.32.2",
-    "prettier": "^2.8.8"
+    "craco-alias": "^3.0.1"
   }
 }
