--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,8 @@
 {
+  "type": "module",
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
