--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "lottie-web": "^5.11.0",
     "react": "^18.2.0",
     "react-app-alias": "^2.2.2",
