--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.5.0",
     "recoil": "^0.7.7",
+    "recoil-persist": "^4.2.0",
     "styled-components": "^5.3.10",
     "typescript": "*",
     "web-vitals": "^2.1.0"
