feat: express Server fly.io로 배포

--- a/server/package.json
+++ b/server/package.json
@@ -16,5 +16,11 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.4.0",
     "rand-token": "^1.0.1"
+  },
+  "scripts": {
+    "start": "npm install && node server.js"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.2.7"
   }
 }
