feat: deploy setting, 환경변수 설정

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-REACT_APP_SERVER_URL = soccer-quiz-app.fly.dev
+REACT_APP_SERVER_URL = https://port-0-soccer-quiz-mobile-otjl2cli03spos.sel4.cloudtype.app
