--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "react-icons": "^4.8.0",
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
-    "react-scripts": "5.0.1",
+    
     "recharts": "^2.5.0",
     "recoil": "^0.7.7",
     "recoil-persist": "^4.2.0",
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.21.5",
     "@types/styled-components": "^5.1.26",
-    "craco-alias": "^3.0.1"
+    "craco-alias": "^3.0.1",
+    "react-scripts": "5.0.1"
   }
 }
